теперь можно редактировать название, описание, количество item в deal
